renamed rec vars to more intuitive. removed unused comments.  made generic the loop through hitable_list checking for ray hits (using inheritance).  added vec3 != vec3 operand

--- a/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj.filters
+++ b/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="src\vec3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\hitable_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -38,5 +41,8 @@
     <ClCompile Include="src\vec3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="testPPM.ppm" />
   </ItemGroup>
 </Project>
