--- a/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj
+++ b/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj
@@ -131,6 +131,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\hitable.h" />
+    <ClInclude Include="src\hitable_list.h" />
     <ClInclude Include="src\ray.h" />
     <ClInclude Include="src\sphere.h" />
     <ClInclude Include="src\vec3.h" />
@@ -139,6 +140,9 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ray.cpp" />
     <ClCompile Include="src\vec3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="testPPM.ppm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
