--- a/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj.filters
+++ b/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\hitable_list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
