--- a/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj
+++ b/Ray_Tracer/Ray_Tracer/Ray_Tracer.vcxproj
@@ -131,6 +131,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\dielectric.h" />
     <ClInclude Include="src\hitable.h" />
     <ClInclude Include="src\hitable_list.h" />
     <ClInclude Include="src\lambertian.h" />
